fixed most ui bugs and added router

--- a/app/card/container/card-container.tpl.html
+++ b/app/card/container/card-container.tpl.html
@@ -1,5 +1,6 @@
-﻿<ul class="card-container">
+﻿<ul class="card-container list-unstyled">
     <li ng-repeat="device in vm.devices">
-        <device-count-card device-id="{{device.ID}}"></device-count-card>
+        <device-count-card device-id="{{device.ID}}"
+                           count="5"></device-count-card>
     </li>
 </ul>
