--- a/app/navbar/side/side-navbar.tpl.html
+++ b/app/navbar/side/side-navbar.tpl.html
@@ -1,15 +1,40 @@
-﻿<nav class="navbar navbar-expand-sm navbar-dark navbar-left bg-inverse collapse navbar-collapse" id="sidebar">
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Device Count Dashboard</a>
+﻿<div class="wrapper">
+    <nav class="navbar navbar-dark bg-dark" ng-class="{'active' : vm.isCollapsed}" id="sidebar">
+            <button ng-if="vm.isCollapsed" class="navbar-toggler" type="button" ng-click="vm.isCollapsed = !vm.isCollapsed">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <button ng-if="!vm.isCollapsed" class="navbar-toggler ml-sm-auto chevron-left" type="button" ng-click="vm.isCollapsed = !vm.isCollapsed">
+                <span class="fa fa-chevron-left"></span>
+            </button>
+        <ul class="nav nav-bar-nav components">
+            <li class="nav-item">
+                <a href="#">
+                    <i class="fa fa-home"></i>
+                    {{vm.isCollapsed ? '' : 'Device Dashboard'}}
+                </a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Individual Reports</a>
+            <li class="nav-item">
+                <a href="#reports" data-toggle="collapse" aria-expanded="false">
+                    <i class="fa fa-list-ol"></i>
+                    {{vm.isCollapsed ? '' : 'Reports'}}
+                </a>
+                <ul class="collapse list-unstyled" id="reports">
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Combined Report</a>
+            <li class="nav-item">
+                <a href="#graphs" data-toggle="collapse" aria-expanded="false">
+                    <i class="fa fa-line-chart"></i>
+                    {{vm.isCollapsed ? '' : 'Graphs'}}
+                </a>
+                <ul class="collapse list-unstyled" id="graphs">
+                    <li><a ui-sref="linegraph">Line Graph</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
             </li>
         </ul>
-    </div>
-</nav>
+    </nav>
+</div>
