--- a/app/graph/line/line-graph.tpl.html
+++ b/app/graph/line/line-graph.tpl.html
@@ -1,9 +1,39 @@
-﻿<canvas id="vm.Id" 
-        class="chart chart-line" 
-        chart-data="vm.Model"
-        chart-labels="vm.Label" 
-        chart-series="" 
-        chart-options="vm.Options"
-        chart-dataset-override="" 
-        chart-click="vm.onClick">
-</canvas>
+﻿<div>
+    <canvas chart-line
+            id="vm.Id"
+            chart-data="vm.data"
+            chart-labels="vm.labels"
+            chart-series="vm.series"
+            chart-click="vm.onClick"></canvas>
+</div>
+
+
+<canvas 
+        id="first"
+        class="chart chart-line"
+        chart-data="[
+                [65, 59, 80, 81, 56, 55, 40],
+                [28, 48, 40, 19, 86, 27, 90]
+            ]"
+        chart-labels="['January', 'February', 'March', 'April', 'May', 'June', 'July']"
+        chart-series="['Series A', 'Series B']"
+        chart-data-override=" [{ yAxisID: 'y-axis-1' }, { yAxisID: 'y-axis-2' }]"
+        chart-options="{
+                scales: {
+                    yAxes: [
+                        {
+                            id: 'y-axis-1',
+                            type: 'linear',
+                            display: true,
+                            position: 'left'
+                        },
+                        {
+                            id: 'y-axis-2',
+                            type: 'linear',
+                            display: true,
+                            position: 'right'
+                        }
+                    ]
+                }
+            }"
+        chart-click="vm.onClick"></canvas>
